--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
       </div>
     </footer>
 
-    <!-- <div class="modal-overlay" data-modal>
+    <div class="modal-overlay" data-modal>
       <div class="modal">
         <button class="close-btn" type="button" data-modal-close>
           <svg class="icon-close" width="8" height="8">
@@ -606,15 +606,17 @@
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="link-root" href=""> Privacy Policy</a>
+              <span>
+                I accept the terms and conditions of the
+                <a class="link-root" href=""> Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button class="submit-form" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
-    <!-- <script src="./js/modal.js"></script>  -->
+    </div>
+    <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
 </html>
