--- a/index.html
+++ b/index.html
@@ -406,7 +406,37 @@
             </li>
             <li class="card">
               <div class="box-overlay">
-                <img src="./images/payment.jpg" alt="pay for app" width="360" />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/potfolio/potfolio-desc-2-min.jpg    1x,
+                      ./images/potfolio/potfolio-desc-2@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/potfolio/porfolio-tab-2-min.jpg    1x,
+                      ./images/potfolio/porfolio-tab-2@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/potfolio/porfolio-mob-2-min.jpg   1x,
+                      ./images/potfolio/porfolio-mob-2@2-min.jpg 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/potfolio/potfolio-desc-2-min.jpg "
+                    alt="pay for app"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -420,11 +450,37 @@
             </li>
             <li class="card">
               <div class="box-overlay">
-                <img
-                  src="./images/desk-app.jpg"
-                  alt="app on laptop"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/potfolio/potfolio-desc-3-min.jpg    1x,
+                      ./images/potfolio/potfolio-desc-3@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/potfolio/porfolio-tab-3-min.jpg    1x,
+                      ./images/potfolio/porfolio-tab-3@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/potfolio/porfolio-mob-3-min.jpg   1x,
+                      ./images/potfolio/porfolio-mob-3@2-min.jpg 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/potfolio/potfolio-desc-3-min.jpg "
+                    alt="app on laptop"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -439,11 +495,37 @@
             </li>
             <li class="card">
               <div class="box-overlay">
-                <img
-                  src="./images/taxi-services.jpg"
-                  alt="phone in car"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/potfolio/potfolio-desc-4-min.jpg    1x,
+                      ./images/potfolio/potfolio-desc-4@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/potfolio/porfolio-tab-4-min.jpg    1x,
+                      ./images/potfolio/porfolio-tab-4@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/potfolio/porfolio-mob-4-min.jpg   1x,
+                      ./images/potfolio/porfolio-mob-4@2-min.jpg 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/potfolio/potfolio-desc-4-min.jpg "
+                    alt="phone in car"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -457,11 +539,37 @@
             </li>
             <li class="card">
               <div class="box-overlay">
-                <img
-                  src="./images/screen.jpg"
-                  alt="display phone with picrure"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/potfolio/potfolio-desc-5-min.jpg    1x,
+                      ./images/potfolio/potfolio-desc-5@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/potfolio/porfolio-tab-5-min.jpg    1x,
+                      ./images/potfolio/porfolio-tab-5@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/potfolio/porfolio-mob-5-min.jpg   1x,
+                      ./images/potfolio/porfolio-mob-5@2-min.jpg 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/potfolio/potfolio-desc-5-min.jpg "
+                    alt="display phone with picrure"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -475,11 +583,37 @@
             </li>
             <li class="card">
               <div class="box-overlay">
-                <img
-                  src="./images/courses.jpg"
-                  alt="woman with phone"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/potfolio/potfolio-desc-6-min.jpg    1x,
+                      ./images/potfolio/potfolio-desc-6@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/potfolio/porfolio-tab-6-min.jpg    1x,
+                      ./images/potfolio/porfolio-tab-6@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/potfolio/porfolio-mob-6-min.jpg   1x,
+                      ./images/potfolio/porfolio-mob-6@2-min.jpg 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/potfolio/potfolio-desc-6-min.jpg "
+                    alt="woman with phone"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
