--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
           <ul class="team-card">
             <li class="team-list-item">
               <img
-                srcset="./images/team/mark-min.jpg x1, ./images/team/mark@2x-min.jpg 2x"
+                srcset="
+                  ./images/team/mark-min.jpg    1x,
+                  ./images/team/mark@2x-min.jpg 2x
+                "
                 src="./images/team/mark-min.jpg"
                 alt="photo Mark Guerrero"
                 width="264"
@@ -227,7 +230,10 @@
             </li>
             <li class="team-list-item">
               <img
-                srcset="./images/team/tom-min x1, ./images/team/tom@2x-min.jpg 2x"
+                srcset="
+                  ./images/team/tom-min.jpg    1x,
+                  ./images/team/tom@2x-min.jpg 2x
+                "
                 src="./images/team/tom-min.jpg"
                 alt="photo Tom Ford"
                 width="264"
@@ -269,7 +275,10 @@
             </li>
             <li class="team-list-item">
               <img
-                srcset="./images/team/camila-min x1, ./images/team/camila@2x-min.jpg 2x"
+                srcset="
+                  ./images/team/camila-min.jpg    1x,
+                  ./images/team/camila@2x-min.jpg 2x
+                "
                 src="./images/team/camila-min.jpg"
                 alt="photo Camila Garcia"
                 width="264"
@@ -311,7 +320,10 @@
             </li>
             <li class="team-list-item">
               <img
-                srcset="./images/team/daniel-min x1, ./images/team/daniel@2x-min.jpg 2x"
+                srcset="
+                  ./images/team/daniel-min.jpg    1x,
+                  ./images/team/daniel@2x-min.jpg 2x
+                "
                 src="./images/team/daniel-min.jpg"
                 alt="photo Daniel Wilson"
                 width="264"
