fix sandwich menu

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
           </button>
           <nav class="header-container-select">
             <ul class="nav-link-select">
-              <li><a class="link-select" href="./index.html">Studio</a></li>
+              <li>
+                <a class="link-select link-select-sendw" href="./index.html"
+                  >Studio</a
+                >
+              </li>
               <li><a class="link-select" href="">Portfolio</a></li>
               <li><a class="link-select" href="">Contacts</a></li>
             </ul>
@@ -67,13 +71,13 @@
           <address class="contact-select">
             <ul class="contact-list-select">
               <li>
-                <a class="mail-phone" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
+                <a class="sendwich-phone" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
                 >
               </li>
               <li>
-                <a class="mail-phone" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
+                <a class="sendwich-mail" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
                 >
               </li>
             </ul>
